[gd_scene load_steps=8 format=2]

[ext_resource path="res://Font/EXEPixelPerfect.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Font/PauseMenu.tres" type="StyleBox" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.2, 0.2 )
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 120.0
margin_top = 120.0
margin_right = 600.0
margin_bottom = 600.0
custom_constants/separation = 50

[node name="Resume" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 51.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
text = "Resume"

[node name="SaveGame" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 101.0
margin_right = 480.0
margin_bottom = 152.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "Save Game"

[node name="LoadGame" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 202.0
margin_right = 480.0
margin_bottom = 253.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "Load Game"

[node name="MainMenu" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 303.0
margin_right = 480.0
margin_bottom = 354.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "Main Menu"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/SaveGame" to="." method="_on_SaveGame_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
